welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:1: error: Missing closing brace `}' assumed here
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
^